--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -1,50 +1,40 @@
-<!DOCTYPE html>
-<html lang="pt_br">
-    <head>
-        <meta charset="UTF=8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-        <title>Resultado da pesquisa</title>
-        <link href="https://fonts.googleapis.com/css2?family=Montaga&display=swap" rel="stylesheet">
-        
-        <link href="style/main.css" rel="stylesheet">
-        <link href="style/search-results.css" rel="stylesheet">
-        <link href="style/responsive.css" rel="stylesheet">
-    </head>
+{% extends "layout.html" %}
+{% set pageId = "page-search-results" %}
 
-    <body>
-        <div id="page-search-results">
-            <header>  
-                <img src="/icones/logo.svg" alt="Logomarca">
-                <a href="/">
-                    <span></span>
-                    Voltar a HOME
-                </a>
-            </header>
-            <main>
-                <h4>
-                    <strong>2 pontos</strong> encontrados
-                </h4>
-                <div class= "cards">
-                    <div class="card">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS23mlY0veiFgO_tPw8vdVAonWJwBorsFOvYxBvTYJTPVZzF2oX&usqp=CAU" alt="Colectoria">
-                        <h1>Colectoria</h1>
-                        <h3>Resíduos Eletrônicos, Lâmpadas</h3>
-                        <p>Rio do Sul, Santa Catarina<br/>Guilherme Gemalla, Jardim América<br/>Nº 260</p>
-                    </div>
-                </div>
-                
-                <div class= "cards">
-                    <div class="card">
-                        <img src="https://www.fragmaq.com.br/wp-content/uploads/2017/10/1-reciclagem-papel.jpg" alt="Papersider">
-                        <h1>Papersider</h1>
-                        <h3>Papéis e Papelão</h3>
-                        <p>Rio do Sul, Santa Catarina<br/>Guilherme Gemalla, Jardim América<br/>Nº 260</p>
-                    </div>
-                </div>
-            </main>
+{% block title %}
+    <title>Resultado da pesquisa</title>
+{% endblock title %}
+        
+{% block styles %}
+    <link href="style/search-results.css" rel="stylesheet">
+{% endblock styles %} 
+        
+
+
+{% block content %}
+    {% include "partials/page-header.html"%}
+    <main>
+        <h4>
+            <strong>2 pontos</strong> encontrados
+        </h4>
+        <div class= "cards">
+            <div class="card">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS23mlY0veiFgO_tPw8vdVAonWJwBorsFOvYxBvTYJTPVZzF2oX&usqp=CAU" alt="Colectoria">
+                <h1>Colectoria</h1>
+                <h3>Resíduos Eletrônicos, Lâmpadas</h3>
+                <p>Rio do Sul, Santa Catarina<br/>Guilherme Gemalla, Jardim América<br/>Nº 260</p>
+            </div>
         </div>
         
-    </body>
-    
-</html>
+        <div class= "cards">
+            <div class="card">
+                <img src="https://www.fragmaq.com.br/wp-content/uploads/2017/10/1-reciclagem-papel.jpg" alt="Papersider">
+                <h1>Papersider</h1>
+                <h3>Papéis e Papelão</h3>
+                <p>Rio do Sul, Santa Catarina<br/>Guilherme Gemalla, Jardim América<br/>Nº 260</p>
+            </div>
+        </div>
+    </main>
+{% endblock content %}
+            
+
